--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1><center>Návod ako POSLKADAŤ Rubikovu kocku 2x2x2</center></h1>
 <p><center><p style="color: rgb(255, 0, 0);"><strong>:HLAVNÉ POTREBNÉ VECI:</strong></center></p>
 <p><center>--)MOZOG na úrovni IQ 50< a viac(--</center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\Mongol.jpg" alt="Ehmm Mongol wondering" width="600" height="140"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\Mongol.jpg" alt="Ehmm Mongol wondering" width="600" height="140"></center></p>
 <p><center><p style="color: rgb(255, 0, 0);"><strong>:VEDĽAJŠIE VECI:</strong></center></p>
 <p><center>--)2x2x2 kocku(--</center></p>
 <p><center>Ruky (na otáčanie kocky)</center></p>
@@ -19,13 +19,13 @@
 <p><center>1.) zoberte kocku a zatial zložte len celú <strong>BIELU STRANU<style></style></strong></center></p>
 <p><center><p style="color: green;"><strong>takže takto... POZRI SI OBRÁZOK NIŽŠIE</strong></center></p>
 <p><center>Z tohoto <strong>NEPORIADKU</strong> poslkadajte <strong>BIELU STRANU</strong></center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\Jeden.jpg" alt="Kocka 2x2x2 solving" width="250" height="400"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\Jeden.jpg" alt="Kocka 2x2x2 solving" width="250" height="400"></center></p>
 <p><center>↓↓ <strong>TAKTO</strong> ↓↓</center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\dva.jpg" alt="Kocka 2x2x2" width="250" height="400"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\dva.jpg" alt="Kocka 2x2x2" width="250" height="400"></center></p>
 <p><center>Potom poskladajte <strong>ŽLTÚ STRANU</strong>tak ,že </center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\tri.jpg" alt="Dalsia kocka 2x2x2" width="250" height="300" ></center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\štyri.jpg" width="300" height="400" alt="a zas next"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\tri.jpg" alt="Dalsia kocka 2x2x2" width="250" height="300" ></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\štyri.jpg" width="300" height="400" alt="a zas next"></center></p>
 <p><center>TERAZ EŠTE TOTO</center></p>
-<p><center><img src="\Fotky 2x2x2 kocka\päť.jpg" width="300" height="400" alt="a zasa next"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka\päť.jpg" width="300" height="400" alt="a zasa next"></center></p>
 </body>
 </html>
