--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1><center>Návod ako POSLKADAŤ Rubikovu kocku 2x2x2</center></h1>
 <p><center><p style="color: rgb(255, 0, 0);"><strong>:HLAVNÉ POTREBNÉ VECI:</strong></center></p>
 <p><center>--)MOZOG na úrovni IQ 50< a viac(--</center></p>
-<p><center><img src="/Fotky 2x2x2 kocka/Mongol.jpg" alt="Ehmm Mongol wondering" width="600" height="140"></center></p>
+<p><center><img src="Fotky 2x2x2 kocka/Mongol.jpg" alt="Ehmm Mongol wondering" width="600" height="140"></center></p>
 <p><center><p style="color: rgb(255, 0, 0);"><strong>:VEDĽAJŠIE VECI:</strong></center></p>
 <p><center>--)2x2x2 kocku(--</center></p>
 <p><center>Ruky (na otáčanie kocky)</center></p>
