--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p><center>1.) zoberte kocku a zatial zložte len celú <strong>BIELU STRANU<style></style></strong></center></p>
 <p><center><p style="color: green;"><strong>takže takto... POZRI SI OBRÁZOK NIŽŠIE</strong></center></p>
 <p><center>Z tohoto <strong>NEPORIADKU</strong> poslkadajte <strong>BIELU STRANU</strong></center></p>
-<p><center><img src="Fotky 2x2x2 kocka/Jeden.jpg" alt="Kocka 2x2x2 solving" width="250" height="400"></center></p>
+<p><center><img src="/Fotky 2x2x2 kocka/Jeden.jpg" alt="Kocka 2x2x2 solving" width="250" height="400"></center></p>
 <p><center>↓↓ <strong>TAKTO</strong> ↓↓</center></p>
 <p><center><img src="Fotky 2x2x2 kocka/dva.jpg" alt="Kocka 2x2x2" width="250" height="400"></center></p>
 <p><center>Potom poskladajte <strong>ŽLTÚ STRANU</strong>tak ,že </center></p>
